# WePChat

./: .gitignore  handoff.md  index.html  manifest.json  readme.md
css/: app.css  liquid-glass-vue.css  onboarding.css
docs/: app-js-split-plan.md  backup-format.md  handoff.md  image-mode-research.md  stability-recovery-plan.md  tools-js-split-plan.md  tools.md
docs_private/: handoff.md  remote-codex-host.md  tools-question.md  webfetch.md
js/: api.js  app-helpers.js  app-methods-core.js  app-methods-generation.js  app-methods-image-recovery.js  app-methods-lock.js  app-methods-onboarding.js  app-methods-preview.js  app-methods-sessions.js  app-methods-stability.js  app-methods-theme.js  app-methods-workspace.js  app-options.js  app.js  image-api.js  model-metadata.js  remote-api.js  remote-history.js  remote-scan.js  store.js  theme-system.js  tools.js  util.js
js/tools/: create-folder.js  create-workspace.js  delete-file.js  edit-file.js  image-go.js  list-files.js  list-services.js  move-path.js  path-exists.js  preview-file.js  read-file.js  registry.js  run-js.js  run-service.js  stop-service.js  system-hint.js  web-fetch.js  workspace.js  write-file.js
libs/: liquid-glass-vue.LICENSE.txt  liquid-glass-vue.global.js
wepchat-host/: README.md  package-lock.json  package.json
wepchat-host/lib/: codex-client.js  (+4 more)
wepchat-win/: README.md  package.json
wepchat-win/src-tauri/: Cargo.toml  tauri.conf.json
wepchat-win/src-tauri/src/: db.rs  external_agent.rs  http_client.rs  lib.rs  main.rs  preview_server.rs  sessions.rs  settings.rs  workspace_fs.rs
(+41 files in other folders)
