[package]
name = "wepchat"
version = "0.1.0"
description = "WePChat — lightweight local AI chat for Windows"
authors = ["WEP"]
edition = "2021"

[lib]
name = "wepchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset", "http2"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
